--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@types/uuid": "^8.3.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-pager-view": "^5.4.1",
@@ -22,7 +23,8 @@
     "react-native-screens": "^3.6.0",
     "react-native-tab-view": "^3.1.1",
     "react-redux": "^7.2.4",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
