--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^8.3.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-get-random-values": "^1.7.0",
     "react-native-pager-view": "^5.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
